Fix overflow.

--- a/app/assets/stylesheets/build_overview.css
+++ b/app/assets/stylesheets/build_overview.css
@@ -28,7 +28,7 @@
 }
 
 .test-case-run {
-  overflow: scroll;
+  overflow: auto;
 }
 
 .test-case-run .code {
